styles.css
#main {
    display: block;
}

html,body {
    height: 100%;
}

body {
    display: block;
    font-family: 'Roboto', arial, sans-serif;
    font-size: 14px;
    font-weight: 400;
}

#page {
    display: flex;
    flex-direction: column;
    height: 100%;
}

header {
    display: flex;
    align-items: center;
    float: right;
    height: 60px;
}

a {
    text-decoration: none;
    margin: 5px;
    color: black;
}

a:hover {
    text-decoration: underline;
}

#header-right {
    margin-left: auto;
    display: flex;
    flex-basis: auto;
    align-items: center;
    font-size: 13px;
}

#about-lk {
    margin-left: 15px;
}

#login-lk {
    margin-right: 8px;
    background-color: #1a73e8;
    border: 1px solid transparent;
    color: white;
    padding: 9px 15px;
    font-size: 14px;
    border-radius: 4px;
}

#login-lk:hover {
    background-color: rgb(43, 125, 233);
    box-shadow: 0 1px 2px 0 rgb(66 133 244 / 30%), 0 1px 3px 1px rgb(66 133 244 / 15%);
    text-decoration: none;
}

#app-lk {
    width: 40px;
    height: 40px;
}

#app-lk:hover {
    background-color: rgba(60, 64, 67, 0.08);
    border-radius: 50%;
}

#app-lk svg {
    width: 24px;
    height: 24px;
    padding: 8px;
}

#logo-div {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 92px;
    max-height: 290px;
    height: calc(100% - 560px);
}

#logo {
    margin-top: auto;
}

#search-area-div {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
}

#search-bar-div {
    display: flex;
    flex:20px 1 20px;
    align-items: center;
    justify-content: center;
    max-width: 584px;
    width: 548px;
    height: 40px;
    border: 1px solid #dfe1e5;
    border-radius: 24px;
    padding: 5px 8px 0 14px;
}

#search-bar-div:hover {
    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
}

#search-bar {
    width: 100%;
    padding: 5px 8px 0px 14px;
}

.search-icons{
    width: 20px;
    height: 20px;
    padding: 4px;
}

#search-input {
    width: 100%;
    border: none;
}

#search-input:focus-visible {
    outline: none;
}

#voice-icon {
    cursor: pointer;
}

.search-btns {
    background-color: rgb(248, 249, 250);
    color: rgb(60, 64, 67);
    border-radius: 5px;
    border: none;
    height: 40px;
    padding: 10px;
    margin: 11px 4px 11px 4px;
}

.search-btns:hover {
    border:rgb(218, 220, 224) solid 1px;
    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
}

#space-between {
    margin-top: auto;
}

footer {
    display: flex;
    width: 100%;
    background-color: rgb(242, 242, 242);
    justify-content: space-between;
}

footer a{
    color: rgb(112, 117, 122);
}

